Added new footer to storybook

--- a/packages/storybook-html/src/components/new-footer/new-footer.html
+++ b/packages/storybook-html/src/components/new-footer/new-footer.html
@@ -1,50 +1,217 @@
-<footer class="new-new-uq-footer">
-  <div class="new-uq-footer__container">
-    <div class="new-uq-footer__acknowledgement">
-      UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated.
-      — <a href="https://about.uq.edu.au/reconciliation" class="new-uq-footer__acknowledgement__link">Reconciliation statement</a>
+<footer class="new-footer" data-gtm-category="Footer">
+  <div  class="new-footer__reconciliation">
+    <div class="new-footer__acknowledgement">
+          UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="new-footer__link">Reconciliation statement</a>
     </div>
-    <div class="new-uq-footer__row">
-      <div class="new-uq-footer__column">
-        <div class="new-uq-footer__copyright">© The University of Queensland</div>
-        <div class="new-uq-footer__contact">
-          Enquiries: <a href="tel:+61733651111" class="new-uq-footer__link footer__enquiries-phone"><span itemprop="telephone">+61 7 3365 1111</span></a>
-          &nbsp; | &nbsp;
-          <a href="https://uq.edu.au/contacts" class="new-uq-footer__link footer__contacts-link">Contact directory</a>
-        </div>
-        <div class="new-uq-footer__meta">
-          <abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 &nbsp; | &nbsp;
-          <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="new-uq-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external">00025B</a>
-        </div>
-      </div>
-      <div class="new-uq-footer__column">
-        <div class="new-uq-footer__emergency-contact new-uq-footer__aside">
-            <strong class="new-uq-footer__sub-title">Emergency</strong><br/>
-            Phone: <a href="tel:+61733653333" class="new-uq-footer__link footer__emergency-phone">3365 3333</a>
-        </div>
-      </div>
+  </div>
+  <div class="new-footer__container">
+    <nav class="new-footer__navigation new-footer--desktop">
+      <ul class="new-footer__navigation-list new-footer__navigation-level-1">
+        <li class="new-footer__navigation-item new-footer__navigation--is-open">
+          <h2 class="new-footer__navigation-title">Media</h2>
+          <ul class="new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Media team contacts</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Find a subject matter expert</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Media pack downloads</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">UQ news</a>
+            </li>
+          </ul>
+        </li>
+        <li class="new-footer__navigation-item">
+          <h2 class="new-footer__navigation-title">Staff</h2>
+          <ul class="new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">2022 strategic plan consultation</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">IT Supoort</a>
+            </li>
+          </ul>
+        </li>
+        <li class="new-footer__navigation-item">
+          <h2 class="new-footer__navigation-title">Current students</h2>
+          <ul class="new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Program and courses</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Key dates</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Student support</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">IT Supoort</a>
+            </li>
+          </ul>
+        </li>
+        <li class="new-footer__navigation-item">
+          <h2 class="new-footer__navigation-title">Library</h2>
+          <ul class="new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Library services</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Search catalogue</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">UQ journals</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Library hours</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Library contacts</a>
+            </li>
+          </ul>
+        </li>
+        <li class="new-footer__navigation-item">
+          <h2 class="new-footer__navigation-title">Contact</h2>
+          <ul class="new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Find a researcher</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Divisions and departments</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Campus maps and facilities</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- Mobile Footer Navigation-->
+    <nav class="new-footer__navigation new-footer--mobile">
+      <ul class="uq-accordion new-footer__navigation-list new-footer__navigation-level-1">
+        <li class="uq-accordion__item new-footer__navigation-item new-footer__navigation--is-open">
+          <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Media</button>
+          <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Media team contacts</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Find a subject matter expert</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Media pack downloads</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">UQ news</a>
+            </li>
+          </ul>
+        </li>
+        <li class="uq-accordion__item new-footer__navigation-item">
+          <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Staff</button>
+          <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">2022 strategic plan consultation</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">IT Supoort</a>
+            </li>
+          </ul>
+        </li>
+        <li class="uq-accordion__item new-footer__navigation-item">
+          <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Current students</button>
+          <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Program and courses</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Key dates</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Student support</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">IT Supoort</a>
+            </li>
+          </ul>
+        </li>
+        <li class="uq-accordion__item new-footer__navigation-item">
+          <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Library</button>
+          <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Library services</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">UQ journals</a>
+            </li>
+          </ul>
+        </li>
+        <li class="uq-accordion__item new-footer__navigation-item">
+          <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Contact</button>
+          <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Find a researcher</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Divisions and departments</a>
+            </li>
+            <li class="new-footer__navigation-item">
+              <a href="#" class="new-footer__navigation-link">Campus maps and facilities</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+    <!-- Footer contact details -->
+    <div class="new-footer__contact">   
+      <nav class="new-footer__contact-item">
+        <ul class="new-footer__footer-list new-footer__contact-social"> 
+          <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--facebook new-footer__meta-icons"></a></li> 
+          <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--linkedin new-footer__meta-icons"></a></li> 
+          <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--twitter new-footer__meta-icons"></a></li>
+          <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--youtube new-footer__meta-icons"></a></li>
+          <li class="new-footer__footer-item"><a href="#" class="new-footer__meta-icons--instagram new-footer__meta-icons"></a></li>
+        </ul>
+      </nav> 
+      <div class="new-footer__contact-item new-footer__contact-login"><a href="#" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Web login'});">Web login</a></div>
+   
     </div>
-    <div class="new-uq-footer__footer">
-      <div class="new-uq-footer__row">
-        <div class="new-uq-footer__column">
-          <div class="new-uq-footer__footer-menu">
-            <ul class="new-uq-footer__footer-menu__list">
-              <li class="new-uq-footer__footer-menu__item">
-                <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="new-uq-footer__footer-menu__link">Privacy &amp; Terms of use</a>
-              </li>
-              <li class="new-uq-footer__footer-menu__item">
-                <a href="https://www.uq.edu.au/rti/" rel="external" class="new-uq-footer__footer-menu__link">Right to Information</a>
-              </li>
-              <li class="new-uq-footer__footer-menu__item">
-                <a href="https://uq.edu.au/accessibility/" rel="external" class="new-uq-footer__footer-menu__link">Accessibility</a>
-              </li>
-              <li class="new-uq-footer__footer-menu__item">
-                <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="new-uq-footer__footer-menu__link">Feedback</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <nav class="new-footer__meta">
+      <ul  class="new-footer__footer-list">
+        <li class="new-footer__footer-item">&copy; The University of Queensland</li>
+        <li class="new-footer__footer-item"><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 </li>
+        <li class="new-footer__footer-item"><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="new-footer__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a></li>
+      </ul>
+    </nav>
+    <nav class="new-footer__footer">
+      <ul class="new-footer__footer-list">
+          <li class="new-footer__footer-item">
+              <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+          </li>
+          <li class="new-footer__footer-item">
+              <a href="https://www.uq.edu.au/rti/" rel="external" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to information'});">Right to information</a>
+          </li>
+          <li class="new-footer__footer-item">
+              <a href="https://uq.edu.au/accessibility/" rel="external" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
+          </li>
+          <li class="new-footer__footer-menu__item">
+            <a href="https://uq.edu.au/contacts" rel="external" class="new-footer__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
+          </li>
+      </ul>
+       </nav>
   </div>
 </footer>
