--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -3,6 +3,8 @@
 @use '@uqds/grid/src/scss/global' as grid;
 @use 'global' as *;
 
+$image-path: '../images' !default;
+
 .new-footer {
     background: core.$uq-purple; 
     box-sizing:border-box;
@@ -10,7 +12,7 @@
 
     &__reconciliation {
       background:core.$uq-black;
-      background-image: linear-gradient(90deg, rgba(81, 36, 122, .7), rgba(81, 36, 122, .7)), url("../images/brisbane-river-artwork.png");
+      background-image: linear-gradient(90deg, rgba(81, 36, 122, .7), rgba(81, 36, 122, .7)), url('#{$image-path}/brisbane-river-artwork.png');
       /*background-repeat: no-repeat;*/
     }
 
