--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -182,7 +182,7 @@
           position: absolute;
           width: $nav-dropdown-width;
           transition: opacity .2s ease, transform .2s ease, visibility 0.2s ease;
-          padding: 1rem 0;
+          padding: .5rem 0 1.5rem 0;
         }
 
         &.uq-site-header__navigation__list--open {
@@ -202,7 +202,7 @@
           //border-bottom: 1px solid $nav-dropdown-divider;
           padding-left: core.$space-xxl;
           padding-top: .75rem;
-          padding-bottom: .75rem;
+          padding-bottom: 0;
     
           &:hover,
           &:focus {
