--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -25,8 +25,33 @@ $image-path: '../images' !default;
       line-height: 1.5;
       margin:auto;
 
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+
       @media #{core.$screen-xl-up} {
         padding: core.$space-xl core.$space;
+      }
+
+    }
+
+    &__acknowledgement-flag {
+      width: 2.25rem;
+      height: core.$space-m;
+
+      &:first-child {
+        margin-right: core.$space-s;
+      }
+    }
+
+    &__acknowledgement-text {
+      margin-top: core.$space;
+      flex-basis: 100%;
+
+      @media #{core.$screen-xl-up} {
+        flex-basis: auto;
+        margin-top: core.$space-none;
+        padding-left: core.$space-m;
       }
 
     }
@@ -142,7 +167,7 @@ $image-path: '../images' !default;
         @media #{core.$screen-lg-up} {
           background-color: transparent;
           border: none;
-          padding: 0.5rem core.$space-none core.$space-none;
+          padding: core.$space-s core.$space-none core.$space-none;
           
           &:first-of-type {
             padding: core.$space core.$space-none core.$space-none;
@@ -334,9 +359,9 @@ $image-path: '../images' !default;
 
     &--mobile {
       display: block;
-      min-width: calc(100% + 3rem);
-      margin-left: -24px;
-      margin-right: -24px;
+      min-width: calc(100% + core.$space-xxl);
+      margin-left: -1.5rem;
+      margin-right: -1.5rem;
 
       @media #{core.$screen-lg-up} {
         display: none;
@@ -376,8 +401,8 @@ $image-path: '../images' !default;
       "FooterSocial"
       "FooterOrg"
       "FooterTerms";
-      row-gap: 40px;
-      padding: 0 24px 40px;
+      row-gap: core.$space-xl;
+      padding: core.$space-none core.$space-m core.$space-xl;
 
       max-width: 73.25rem;
       width: 100%; /* may not be needed but forces it to take up space when empty */
@@ -385,16 +410,16 @@ $image-path: '../images' !default;
       margin-right: auto;
 
       @media #{core.$screen-lg-up}  { 
-        row-gap: 32px;
-        padding-top: 32px;
+        row-gap: core.$space-l;
+        padding-top: core.$space-l;
       }
       @media #{core.$screen-xl-up}  { 
         grid-template-areas:
         "FooterNavigation FooterNavigation"
         "FooterSocial FooterSocial"
         "FooterOrg FooterTerms";
-        row-gap: 32px;
-        padding-top: 32px;
+        row-gap: core.$space-l;
+        padding-top: core.$space-l;
       }
     }
 
