--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -12,8 +12,13 @@ $image-path: '../images' !default;
 
     &__reconciliation {
       background:core.$uq-black;
+      background-image: linear-gradient(180deg, #451D68 45.31%, rgba(69, 29, 104, 0.554545) 85.94%, rgba(69, 29, 104, 0) 100%), url('#{$image-path}/brisbane-river-artwork.png');
+      /*background-repeat: no-repeat;
       background-image: linear-gradient(90deg, rgba(81, 36, 122, .7), rgba(81, 36, 122, .7)), url('#{$image-path}/brisbane-river-artwork.png');
-      /*background-repeat: no-repeat;*/
+      */
+      @media #{core.$screen-xl-up} {
+        background-image: linear-gradient(90deg, #451D68 28.12%, rgba(70, 30, 106, 0.65) 70.31%, rgba(72, 32, 108, 0) 100%), url('#{$image-path}/brisbane-river-artwork.png');
+      }
     }
 
     &__acknowledgement {
