--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -167,7 +167,7 @@ $image-path: '../images' !default;
 
     &__navigation-toggle::before {
       content: "";
-      background-image: url(icon-constants.get-icon("standard--chevron-down", core.$uq-white));
+      background-image: url(icon-constants.get-icon("standard--chevron-down-sml", core.$uq-white));
       background-repeat: no-repeat;
       width: core.$space-m;
       height: core.$space-m;
@@ -182,7 +182,7 @@ $image-path: '../images' !default;
     }
     
     .uq-accordion__toggle--active::before {
-      background-image: url(icon-constants.get-icon("standard--chevron-up", core.$uq-white));
+      background-image: url(icon-constants.get-icon("standard--chevron-up-sml", core.$uq-white));
     }
 
 
