--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -33,7 +33,10 @@
     
 
     @media #{core.$screen-lg-up} {
-      @include grid.layout-containment;
+      //@include grid.layout-containment;
+      max-width: 73.25rem;
+      margin-left: auto;
+      margin-right: auto;
       grid-template-areas:
         "logo mainnav searchtoggle";
       padding-left: core.$space;
@@ -311,7 +314,10 @@
   &__nav-secondary-container {
     @media #{core.$screen-lg-up} {
       text-align: right;
-      @include grid.layout-containment;
+      //@include grid.layout-containment;
+      max-width: 73.25rem;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 
@@ -388,7 +394,10 @@
     @media #{core.$screen-lg-up} {
       padding-left: core.$space;
       padding-right: core.$space;
-      @include grid.layout-containment;
+      // @include grid.layout-containment;
+      max-width: 73.25rem;
+      margin-left: auto;
+      margin-right: auto;
     }
 
   }
@@ -499,7 +508,10 @@
   }
 
   &__megamenu-container {
-    @include grid.layout-containment;
+    //@include grid.layout-containment;
+    max-width: 73.25rem;
+    margin-left: auto;
+    margin-right: auto;
     padding: core.$space core.$space-xxl core.$space-xl core.$space-xxl;
     background: core.$uq-white;
     box-shadow: 0 0.75rem core.$space-m rgb(24 24 24 / 20%);
@@ -599,7 +611,7 @@ body.no-scroll {
       display:none;
 
       a {
-        padding: core.$space core.$space-m core.$space core.$space-xxl;
+        padding: .75rem core.$space-m .75rem core.$space-xxl;
       }
     }
 
