removed js for window.width. added bug fix for no-scroll

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -565,6 +565,9 @@
 
 body.no-scroll {
   position: fixed;
+  @media #{core.$screen-lg-up} {
+    position: relative;
+  }
 }
 
 // Slide mobile menu 
