--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -526,21 +526,27 @@
 
   .megamenu__row {
     display: grid;
-    grid-template-columns: 22rem max-content;
-    column-gap: 6.5rem;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   }
 
   .megamenu__overview-link {
     display: block;
-    padding: core.$space core.$space-none .75rem core.$space-none;
+    padding: core.$space core.$space-none core.$space-s core.$space-none;
     color: core.$uq-purple;
   }
 
   .megamenu__heading {
     color: core.$uq-purple;
     font-weight: 500;
+    padding-top: core.$space-s;
     padding-bottom: core.$space-s;
+
+    &:nth-of-type(2) {
+      padding-top: core.$space-xl;
+    }
+
   }
+
 
   .megamenu__menu {
     & ul {
