increase padding on megamenu overview link

--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -531,7 +531,7 @@
 
   .megamenu__overview-link {
     display: block;
-    padding: core.$space core.$space-none core.$space-s core.$space-none;
+    padding: core.$space core.$space-none;
     color: core.$uq-purple;
   }
 
