--- a/packages/new-header/src/scss/_component.scss
+++ b/packages/new-header/src/scss/_component.scss
@@ -29,11 +29,8 @@
     grid-template-areas:
     "menutoggle logo searchtoggle"
     "mainnav-mobile mainnav-mobile mainnav-mobile";
-  
-    
 
     @media #{core.$screen-lg-up} {
-      //@include grid.layout-containment;
       max-width: 73.25rem;
       margin-left: auto;
       margin-right: auto;
@@ -41,9 +38,7 @@
         "logo mainnav searchtoggle";
       padding-left: core.$space;
       padding-right: core.$space;
-      
     }
-    
   }
 
   &__menu-toggle  {
@@ -88,8 +83,6 @@
       height: auto;
     }
   }
-
-
 
   & .nav-primary__menu-toggle {
     cursor: pointer;
@@ -154,9 +147,6 @@
     }
 
   }
-
-
-
 
   &__logo {
     grid-area: logo;
@@ -250,19 +240,14 @@
     @media #{core.$screen-lg-up} {
       padding: core.$space-l core.$space-s;
     }
-
   }
 
   .nav-primary-link--has-dropdown {
-
     padding: core.$space-l core.$space-m core.$space-l core.$space-s;
-
 
     &::after {
       content: "";
       background-image: url(icon-constants.get-icon("standard--chevron-down-sml", core.$uq-white));
-      //background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='m7 10 5 5 5-5' stroke='%23FFF' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'%3e%3c/path%3e%3c/svg%3e");
-      // background-size: 0.6rem;
       background-repeat: no-repeat;
       width: core.$space;
       height: core.$space;
@@ -303,7 +288,6 @@
         }
       }
     }
-
   }
 
   &__nav-secondary {
@@ -314,7 +298,6 @@
   &__nav-secondary-container {
     @media #{core.$screen-lg-up} {
       text-align: right;
-      //@include grid.layout-containment;
       max-width: 73.25rem;
       margin-left: auto;
       margin-right: auto;
@@ -335,7 +318,6 @@
       align-items: center;
       flex-direction: row;
     }
-
   }
 
   &__nav-secondary-item {
@@ -357,8 +339,6 @@
     }
   }
 
-  
-
   &__search {
 
     background: core.$uq-purple;
@@ -367,23 +347,18 @@
     top: 3.95rem;
     z-index: 99;
     box-shadow: 0 .75rem core.$space-m rgb(24 24 24 / 20%);
-    // overflow: hidden;
+    transition:  height .2s ease-in-out, transform .2s ease-in-out, visibility .2s ease;// visibility .2s ease,  opacity .2s ease;
+    transform: translateY(-1rem);
+    visibility: hidden;
+    height: 0;
 
     @media #{core.$screen-lg-up} {
       top: 8.3rem;
     }
 
-    transition:  height .2s ease-in-out, transform .2s ease-in-out, visibility .2s ease;// visibility .2s ease,  opacity .2s ease;
-    transform: translateY(-1rem);
-    visibility: hidden;
-    //opacity: 0;
-    height: 0;
-
-
     &--is-open {    
       transform: translateY(0);
       visibility: visible;
-      //opacity: 1;
       height: auto;
     }
   }
@@ -394,12 +369,10 @@
     @media #{core.$screen-lg-up} {
       padding-left: core.$space;
       padding-right: core.$space;
-      // @include grid.layout-containment;
       max-width: 73.25rem;
       margin-left: auto;
       margin-right: auto;
     }
-
   }
 
   &__search-query {
@@ -412,17 +385,14 @@
     margin-bottom: core.$space;
     padding-top: core.$space;
     padding-bottom: core.$space;
-
   }
 
   &__search-query-input {
     margin: 0 !important;
     padding: .75rem core.$space !important;
-
   }
 
   &__search-query-button {
-
     background-clip: padding-box;
     background-color: core.$uq-white;
     border-radius: 5px;
@@ -508,11 +478,10 @@
   }
 
   &__megamenu-container {
-    //@include grid.layout-containment;
     max-width: 73.25rem;
     margin-left: auto;
     margin-right: auto;
-    // padding: core.$space core.$space core.$space-xl core.$space;
+
     padding: core.$space core.$space-xxl core.$space-xl core.$space-xxl;
     background: core.$uq-white;
     box-shadow: 0 0.75rem core.$space-m rgb(24 24 24 / 20%);
@@ -520,7 +489,6 @@
     
     @media #{core.$screen-xl-up} {
       max-width: 77.25rem;
-      // padding: core.$space core.$space-xxl core.$space-xl core.$space-xxl;
     }
   }
 
@@ -544,9 +512,7 @@
     &:nth-of-type(2) {
       padding-top: core.$space-xl;
     }
-
   }
-
 
   .megamenu__menu {
     & ul {
@@ -769,9 +735,8 @@ body.no-scroll {
 
   .new-header__newglobal-nav-link .slide-menu__decorator::before {
     content: "";
-
-   background-image: url(icon-constants.get-icon("standard--chevron-right-sml", core.$uq-white));
-}
+    background-image: url(icon-constants.get-icon("standard--chevron-right-sml", core.$uq-white));
+  }
 }
 
 /* LOCAL SITE NAVIGATION MODIFIERS */
@@ -797,5 +762,5 @@ body.no-scroll {
 }
 
 .uq-site-header__navigation-toggle {
-  display:None;
+  display: none;
 }
