--- a/packages/new-footer/src/scss/_component.scss
+++ b/packages/new-footer/src/scss/_component.scss
@@ -3,8 +3,6 @@
 @use '@uqds/grid/src/scss/global' as grid;
 @use 'global' as *;
 
-$image-path: '../images' !default;
-
 .new-footer {
     background: core.$uq-purple; 
     box-sizing:border-box;
@@ -12,12 +10,10 @@ $image-path: '../images' !default;
 
     &__reconciliation {
       background:core.$uq-black;
-      background-image: linear-gradient(180deg, #451D68 45.31%, rgba(69, 29, 104, 0.554545) 85.94%, rgba(69, 29, 104, 0) 100%), url('#{$image-path}/brisbane-river-artwork.png');
-      /*background-repeat: no-repeat;
-      background-image: linear-gradient(90deg, rgba(81, 36, 122, .7), rgba(81, 36, 122, .7)), url('#{$image-path}/brisbane-river-artwork.png');
-      */
+      background-image: linear-gradient(180deg, #451D68 45.31%, rgba(69, 29, 104, 0.554545) 85.94%, rgba(69, 29, 104, 0) 100%), url('https://static.uq.net.au/v14/images/rap/brisbane-river-artwork.png');
+      
       @media #{core.$screen-xl-up} {
-        background-image: linear-gradient(90deg, #451D68 28.12%, rgba(70, 30, 106, 0.65) 70.31%, rgba(72, 32, 108, 0) 100%), url('#{$image-path}/brisbane-river-artwork.png');
+        background-image: linear-gradient(90deg, #451D68 28.12%, rgba(70, 30, 106, 0.65) 70.31%, rgba(72, 32, 108, 0) 100%), url('https://static.uq.net.au/v14/images/rap/brisbane-river-artwork.png');
       }
     }
 
