--- a/packages/storybook-html/src/components/new-footer/new-footer.scss
+++ b/packages/storybook-html/src/components/new-footer/new-footer.scss
@@ -1,3 +1,1 @@
-@use '@uqds/new-footer/src/scss/_component' with (
-    $image-path: '../../../node_modules/@uqds/new-footer/src/images'
-);
+@use '@uqds/new-footer/src/scss/_component';
