--- a/packages/private-design-output/src/scss/main.scss
+++ b/packages/private-design-output/src/scss/main.scss
@@ -9,8 +9,8 @@
 @use 'breadcrumb/src/scss/component' as breadcrumb;
 @use 'button/src/scss/component' as button;
 @use 'card/src/scss/component' as card;
-@use 'footer/src/scss/component' as new-footer;
-@use 'header/src/scss/component' as new-header;
+@use 'footer/src/scss/component' as uq-footer;
+@use 'header/src/scss/component' as uq-header;
 @use 'form/src/scss/component' as form;
 @use 'grid-menu/src/scss/component' as grid-menu;
 @use 'hero/src/scss/component' as hero;
