--- a/packages/header-legacy/src/scss/_component.scss
+++ b/packages/header-legacy/src/scss/_component.scss
@@ -4,7 +4,7 @@
 @use '@uqds/form/src/scss/global' as form;
 @use 'global' as *;
 
-.uq-header {    
+.legacy-header {    
     background: core.$uq-purple;
     background: core.$uq-purple-gradient;
     box-sizing: border-box;
@@ -102,7 +102,7 @@
                 width: auto;
             }
 
-            .uq-header__navigation-container {
+            .legacy-header__navigation-container {
                 height: auto;
                 visibility: visible;
                 overflow: initial;
