--- a/packages/storybook-html/src/components/header-legacy/header.html
+++ b/packages/storybook-html/src/components/header-legacy/header.html
@@ -1,45 +1,45 @@
-<header class="uq-header">
-    <div class="uq-header__container">
-        <div class="uq-header__logo">
-            <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-            <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+<header class="legacy-header">
+    <div class="legacy-header__container">
+        <div class="legacy-header__logo">
+            <a class="legacy-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+            <a class="legacy-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
         </div>
-        <div class="uq-header__search-toggle">
-            <button class="uq-header__search-toggle-button">Search</button>
+        <div class="legacy-header__search-toggle">
+            <button class="legacy-header__search-toggle-button">Search</button>
         </div>
-        <div class="uq-header__search">
+        <div class="legacy-header__search">
             <form>
                 <fieldset>
-                    <legend class="uq-header__search-title">What are you looking for?</legend>
-                    <div class="uq-header__search-range">
-                        <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio uq-header__search-radio">
-                        <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
+                    <legend class="legacy-header__search-title">What are you looking for?</legend>
+                    <div class="legacy-header__search-range">
+                        <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio legacy-header__search-radio">
+                        <label for="edit-as_sitesearch-off" class="option legacy-header__search-label">Search all UQ websites</label>
                     </div>
-                    <div class="uq-header__search-range">
-                        <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio uq-header__search-radio">
-                        <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website (future-students.uq.edu.au)</label>
+                    <div class="legacy-header__search-range">
+                        <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio legacy-header__search-radio">
+                        <label for="edit-as_sitesearch-on" class="option legacy-header__search-label">Search this website (future-students.uq.edu.au)</label>
                     </div>
-                    <div class="uq-header__search-query">
+                    <div class="legacy-header__search-query">
                         <label for="edit-q" class="visually-hidden">Search term</label>
-                        <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="uq-header__search-query-input">
-                        <span class="uq-header__search-query-button">
-                            <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
+                        <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="legacy-header__search-query-input">
+                        <span class="legacy-header__search-query-button">
+                            <input type="submit" name="op" value="Search" class="legacy-header__search-query-submit">
                         </span>
                     </div>
                 </fieldset>
             </form>
         </div>
-        <nav class="uq-header__navigation">
-            <ul class="uq-header__navigation-container">
-                <li><a class="uq-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
-                <li><a class="uq-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
-                <li><a class="uq-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
-                <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/news/">News</a></li>
-                <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/events/">Events</a></li>
-                <li><a class="uq-header__navigation-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
-                <li><a class="uq-header__navigation-link" href="https://www.library.uq.edu.au/">Library</a></li>
-                <li><a class="uq-header__navigation-link" href="https://giving.uq.edu.au/">Give now</a></li>
-                <li><a class="uq-header__navigation-link" href="https://my.uq.edu.au/">my.UQ</a></li>
+        <nav class="legacy-header__navigation">
+            <ul class="legacy-header__navigation-container">
+                <li><a class="legacy-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://www.uq.edu.au/news/">News</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://www.uq.edu.au/events/">Events</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://www.library.uq.edu.au/">Library</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://giving.uq.edu.au/">Give now</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://my.uq.edu.au/">my.UQ</a></li>
             </ul>
         </nav>
     </div>
