--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -1,24 +1,24 @@
-<header class="new-header">
-  <div class="new-header__container">
-    <div class="new-header__menu-toggle">
+<header class="uq-header">
+  <div class="uq-header__container">
+    <div class="uq-header__menu-toggle">
       <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
     </div>
-    <div class="new-header__logo">
+    <div class="uq-header__logo">
       <a class="logo--large gtm-processed" href="https://www.uq.edu.au/">
         <img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg">
       </a>
     </div>
-    <div class="new-header__search-toggle">
+    <div class="uq-header__search-toggle">
       <button class="nav-primary__toggle nav-primary__search-toggle">
          <div class="search-toggle__label">Search</div>
       </button>
     </div>
-    <div class="new-header__nav-primary">
-      <nav class="new-header__nav-primary-container">
-        <ul class="new-header__nav-primary-list">
-          <li><a class="new-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
-            <div class="new-header__megamenu">
-              <div class="new-header__megamenu-container">
+    <div class="uq-header__nav-primary">
+      <nav class="uq-header__nav-primary-container">
+        <ul class="uq-header__nav-primary-list">
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a>
+            <div class="uq-header__megamenu">
+              <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">Study overview</a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
@@ -73,9 +73,9 @@
               </div>
           </div>
           </li>
-          <li><a class="new-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
-            <div class="new-header__megamenu">
-              <div class="new-header__megamenu-container">
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au/" class="gtm-processed">Research</a>
+            <div class="uq-header__megamenu">
+              <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">Research overview</a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
@@ -114,9 +114,9 @@
               </div>
             </div>
           </li>
-          <li><a class="new-header__nav-primary-link nav-primary-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
-            <div class="new-header__megamenu">
-              <div class="new-header__megamenu-container">
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a>
+            <div class="uq-header__megamenu">
+              <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">Parners and Community overview</a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
@@ -159,9 +159,9 @@
               </div>
             </div>
           </li>
-          <li><a class="new-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
-            <div class="new-header__megamenu">
-              <div class="new-header__megamenu-container">
+          <li><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au/" class="gtm-processed">About</a>
+            <div class="uq-header__megamenu">
+              <div class="uq-header__megamenu-container">
                 <a href="#" class="megamenu__overview-link">About overview</a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
@@ -207,8 +207,8 @@
   </div>
   <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
     <ul>
-      <li class="new-header__newglobal-nav-item">
-        <a class="new-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
+      <li class="uq-header__newglobal-nav-item">
+        <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
         <ul>
           <li>
             <a href="#">Study overview</a>
@@ -242,8 +242,8 @@
           </li>
         </ul>
       </li>
-      <li  class="new-header__newglobal-nav-item">
-        <a  class="new-header__newglobal-nav-link slide-menu__control" href="#">Research</a>
+      <li  class="uq-header__newglobal-nav-item">
+        <a  class="uq-header__newglobal-nav-link slide-menu__control" href="#">Research</a>
         <ul>
           <li>
             <a href="#">Research overview</a>
@@ -270,8 +270,8 @@
           </li>
         </ul>
       </li>
-      <li  class="new-header__newglobal-nav-item">
-        <a class="new-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
+      <li  class="uq-header__newglobal-nav-item">
+        <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
         <ul>
           <li>
             <a href="#">Partners and community overview</a>
@@ -298,8 +298,8 @@
           </li>
         </ul>
       </li>
-      <li class="new-header__newglobal-nav-item">
-        <a class="new-header__newglobal-nav-link slide-menu__control" href="#">About</a>
+      <li class="uq-header__newglobal-nav-item">
+        <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">About</a>
         <ul>
           <li>
             <a href="#">About overview</a>
@@ -317,54 +317,54 @@
           <li><a href="#">Careers at UQ</a></li>
         </ul>
       </li>
-      <li  class="new-header__nav-secondary-item">
-        <a class="new-header__nav-secondary-link" href="#">UQ home</a>
+      <li  class="uq-header__nav-secondary-item">
+        <a class="uq-header__nav-secondary-link" href="#">UQ home</a>
       </li>
-      <li  class="new-header__nav-secondary-item">
-        <a class="new-header__nav-secondary-link" href="#">News</a>
+      <li  class="uq-header__nav-secondary-item">
+        <a class="uq-header__nav-secondary-link" href="#">News</a>
       </li>
-      <li  class="new-header__nav-secondary-item">
-        <a class="new-header__nav-secondary-link" href="#">Events</a>
+      <li  class="uq-header__nav-secondary-item">
+        <a class="uq-header__nav-secondary-link" href="#">Events</a>
       </li>
-      <li  class="new-header__nav-secondary-item">
-        <a class="new-header__nav-secondary-link" href="#">Give</a>
+      <li  class="uq-header__nav-secondary-item">
+        <a class="uq-header__nav-secondary-link" href="#">Give</a>
       </li>
-      <li  class="new-header__nav-secondary-item">
-        <a class="new-header__nav-secondary-link" href="#">Contact</a>
+      <li  class="uq-header__nav-secondary-item">
+        <a class="uq-header__nav-secondary-link" href="#">Contact</a>
       </li>  
   </nav>
-  <div class="new-header__search">
-    <div class="new-header__search-container">
+  <div class="uq-header__search">
+    <div class="uq-header__search-container">
       <form>
         <fieldset>
-          <div class="new-header__search-query">
+          <div class="uq-header__search-query">
             <label for="edit-q" class="visually-hidden">Search term</label>
-            <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="new-header__search-query-input">
-            <span class="new-header__search-query-button">
-              <input type="submit" name="op" value="Search" class="new-header__search-query-submit">
+            <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input">
+            <span class="uq-header__search-query-button">
+              <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
             </span>
           </div>
         </fieldset>
       </form>
     </div>
   </div>
-  <div class="new-header__nav-secondary">
-    <nav class="new-header__nav-secondary-container">
-      <ul class="new-header__nav-secondary-list">
-          <li class="new-header__nav-secondary-item">
-            <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'home'});">UQ home</a>
+  <div class="uq-header__nav-secondary">
+    <nav class="uq-header__nav-secondary-container">
+      <ul class="uq-header__nav-secondary-list">
+          <li class="uq-header__nav-secondary-item">
+            <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'home'});">UQ home</a>
           </li>
-          <li class="new-header__nav-secondary-item">
-              <a href="https://www.uq.edu.au/news/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://www.uq.edu.au/news/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'News'});">News</a>
           </li>
-          <li class="new-header__nav-secondary-item">
-              <a href="https://www.uq.edu.au/events/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://www.uq.edu.au/events/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Events'});">Events</a>
           </li>
-          <li class="new-header__nav-secondary-item">
-              <a href="https://alumni.uq.edu.au/giving/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
+          <li class="uq-header__nav-secondary-item">
+              <a href="https://alumni.uq.edu.au/giving/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Give'});">Give</a>
           </li>
-          <li class="new-header__nav-secondary-item">
-            <a href="https://uq.edu.au/departments/" rel="external" class="new-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
+          <li class="uq-header__nav-secondary-item">
+            <a href="https://uq.edu.au/departments/" rel="external" class="uq-header__nav-secondary-link" onclick="gtag('event', 'click', {'event_category': 'UQ Header', 'event_label': 'Contact'});">Contact</a>
           </li>
       </ul>
     </nav>
