--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -1,46 +1,46 @@
 <!-- header -->
-<header class="uq-header">
-  <div class="uq-header__container">
-      <div class="uq-header__logo">
-          <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-          <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+<header class="legacy-header">
+  <div class="legacy-header__container">
+      <div class="legacy-header__logo">
+          <a class="legacy-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+          <a class="legacy-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
       </div>
-      <div class="uq-header__search-toggle">
-          <button class="uq-header__search-toggle-button">Search</button>
+      <div class="legacy-header__search-toggle">
+          <button class="legacy-header__search-toggle-button">Search</button>
       </div>
-      <div class="uq-header__search">
+      <div class="legacy-header__search">
           <form>
               <fieldset>
-                  <legend class="uq-header__search-title">What are you looking for?</legend>
-                  <div class="uq-header__search-range">
-                      <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio uq-header__search-radio">
-                      <label for="edit-as_sitesearch-off" class="option uq-header__search-label">Search all UQ websites</label>
+                  <legend class="legacy-header__search-title">What are you looking for?</legend>
+                  <div class="legacy-header__search-range">
+                      <input type="radio" id="edit-as_sitesearch-off" name="as_sitesearch" value="" class="form-radio legacy-header__search-radio">
+                      <label for="edit-as_sitesearch-off" class="option legacy-header__search-label">Search all UQ websites</label>
                   </div>
-                  <div class="uq-header__search-range">
-                      <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio uq-header__search-radio">
-                      <label for="edit-as_sitesearch-on" class="option uq-header__search-label">Search this website (future-students.uq.edu.au)</label>
+                  <div class="legacy-header__search-range">
+                      <input type="radio" id="edit-as_sitesearch-on" name="as_sitesearch" value="https://future-students.uq.edu.au/" checked="checked" class="form-radio legacy-header__search-radio">
+                      <label for="edit-as_sitesearch-on" class="option legacy-header__search-label">Search this website (future-students.uq.edu.au)</label>
                   </div>
-                  <div class="uq-header__search-query">
+                  <div class="legacy-header__search-query">
                       <label for="edit-q" class="visually-hidden">Search term</label>
-                      <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="uq-header__search-query-input">
-                      <span class="uq-header__search-query-button">
-                          <input type="submit" name="op" value="Search" class="uq-header__search-query-submit">
+                      <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="legacy-header__search-query-input">
+                      <span class="legacy-header__search-query-button">
+                          <input type="submit" name="op" value="Search" class="legacy-header__search-query-submit">
                       </span>
                   </div>
               </fieldset>
           </form>
       </div>
-      <nav class="uq-header__navigation">
-          <ul class="uq-header__navigation-container">
-              <li><a class="uq-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
-              <li><a class="uq-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
-              <li><a class="uq-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
-              <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/news/">News</a></li>
-              <li><a class="uq-header__navigation-link" href="https://www.uq.edu.au/events/">Events</a></li>
-              <li><a class="uq-header__navigation-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
-              <li><a class="uq-header__navigation-link" href="https://www.library.uq.edu.au/">Library</a></li>
-              <li><a class="uq-header__navigation-link" href="https://giving.uq.edu.au/">Give now</a></li>
-              <li><a class="uq-header__navigation-link" href="https://my.uq.edu.au/">my.UQ</a></li>
+      <nav class="legacy-header__navigation">
+          <ul class="legacy-header__navigation-container">
+              <li><a class="legacy-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://www.uq.edu.au/news/">News</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://www.uq.edu.au/events/">Events</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://www.library.uq.edu.au/">Library</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://giving.uq.edu.au/">Give now</a></li>
+              <li><a class="legacy-header__navigation-link" href="https://my.uq.edu.au/">my.UQ</a></li>
           </ul>
       </nav>
   </div>
@@ -858,51 +858,51 @@
 <br/>
 
 <!-- footer -->
-<footer class="uq-footer" data-gtm-category="Footer">
-  <div class="uq-footer__container">
-      <div class="uq-footer__acknowledgement">
-          UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__acknowledgement__link">Reconciliation statement</a>
+<footer class="legacy-footer" data-gtm-category="Footer">
+  <div class="legacy-footer__container">
+      <div class="legacy-footer__acknowledgement">
+          UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. — <a href="https://about.uq.edu.au/reconciliation" class="legacy-footer__acknowledgement__link">Reconciliation statement</a>
       </div>
-      <div class="uq-footer__row">
-          <div class="uq-footer__column">
-              <div class="uq-footer__copyright">© The University of Queensland</div>
-              <div class="uq-footer__contact">
-                  Enquiries: <a href="tel:+61733651111" class="uq-footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="uq-footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
+      <div class="legacy-footer__row">
+          <div class="legacy-footer__column">
+              <div class="legacy-footer__copyright">© The University of Queensland</div>
+              <div class="legacy-footer__contact">
+                  Enquiries: <a href="tel:+61733651111" class="legacy-footer__link footer__enquiries-phone" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Enquiries phone'});"><span itemprop="telephone">+61 7 3365 1111</span></a>                    &nbsp; | &nbsp; <a href="https://uq.edu.au/contacts" class="legacy-footer__link footer__contacts-link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Contact directory'});">Contact directory</a>
               </div>
-              <div class="uq-footer__meta">
+              <div class="legacy-footer__meta">
                   <abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684 &nbsp; | &nbsp;
-                  <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="uq-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a>
+                  <abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a class="legacy-footer__link cricos__link" href="https://www.uq.edu.au/about/cricos-link" rel="external" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'CRICOS'});">00025B</a>
               </div>
           </div>
-          <div class="uq-footer__column">
-              <div class="uq-footer__emergency-contact uq-footer__aside">
-                      <strong class="uq-footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="uq-footer__link footer__emergency-phone" onclick="gtag('event', 'click',
+          <div class="legacy-footer__column">
+              <div class="legacy-footer__emergency-contact legacy-footer__aside">
+                      <strong class="legacy-footer__sub-title">Emergency</strong><br> Phone: <a href="tel:+61733653333" class="legacy-footer__link footer__emergency-phone" onclick="gtag('event', 'click',
                   {'event_category': 'UQ Footer', 'event_label': 'Emergency phone'});">3365 3333</a>
               </div>
           </div>
       </div>
-      <div class="uq-footer__footer">
-          <div class="uq-footer__row">
-              <div class="uq-footer__column">
-                  <div class="uq-footer__footer-menu">
-                      <ul class="uq-footer__footer-menu__list">
-                          <li class="uq-footer__footer-menu__item">
-                              <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
+      <div class="legacy-footer__footer">
+          <div class="legacy-footer__row">
+              <div class="legacy-footer__column">
+                  <div class="legacy-footer__footer-menu">
+                      <ul class="legacy-footer__footer-menu__list">
+                          <li class="legacy-footer__footer-menu__item">
+                              <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="legacy-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Privacy'});">Privacy &amp; Terms of use</a>
                           </li>
-                          <li class="uq-footer__footer-menu__item">
-                              <a href="https://www.uq.edu.au/rti/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
+                          <li class="legacy-footer__footer-menu__item">
+                              <a href="https://www.uq.edu.au/rti/" rel="external" class="legacy-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Right to Information'});">Right to Information</a>
                           </li>
-                          <li class="uq-footer__footer-menu__item">
-                              <a href="https://uq.edu.au/accessibility/" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
+                          <li class="legacy-footer__footer-menu__item">
+                              <a href="https://uq.edu.au/accessibility/" rel="external" class="legacy-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Accessibility'});">Accessibility</a>
                           </li>
-                          <li class="uq-footer__footer-menu__item">
-                              <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="uq-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
+                          <li class="legacy-footer__footer-menu__item">
+                              <a href="https://its.uq.edu.au/feedback?r=https://uq.edu.au" rel="external" class="legacy-footer__footer-menu__link" onclick="gtag('event', 'click', {'event_category': 'UQ Footer', 'event_label': 'Feedback'});">Feedback</a>
                           </li>
                       </ul>
                   </div>
               </div>
-              <div class="uq-footer__column">
-                  <a href="" class="uq-footer__login-link uq-footer__aside" rel="nofollow">Login</a>
+              <div class="legacy-footer__column">
+                  <a href="" class="legacy-footer__login-link legacy-footer__aside" rel="nofollow">Login</a>
               </div>
           </div>
       </div>
