Style-lint changes

--- a/packages/storybook-html/src/components/progression/progression.scss
+++ b/packages/storybook-html/src/components/progression/progression.scss
@@ -1,4 +1,4 @@
-@import "@uqds/progression/src/scss/_component";
+@use "@uqds/progression/src/scss/component";
 
 .uqds-progression-wrapper {
   width: 100vw;
